                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 02-09-2005 fixed: filerar would fail if seek was called immediately after construction (broke e.g. mp3s with id3v2-tags).
 - 02-09-2005 added: httpapi exposed more values to GetGuiStatus
 - 02-09-2005 fixed: Build.bat now works again *blush*, works better if it actually builds...
 - 01-09-2005 fixed: music .pls and .strm files inheriting folder.jpg
 - 01-09-2005 fixed: [ 1276498 ] Build.bat didn't work for all Windows languages. Thx to Pade2
 - 01-09-2005 fixed: dvdplayer would stutter when OSD was up (due to criticalsections stalling renderthread)
 - 01-09-2005 fixed: dvdplayer would lockup if OSD was open and player came across a stillframe
 - 01-09-2005 fixed: thumbnails for .strm files
 - 01-09-2005 added: big list view to my video title view
 - 31-08-2005 changed: new version of dumb module codec. now also enabled for .xm's.
 - 30-08-2005 changed: Shoutcast Top500 back to compressed form.
 - 29-08-2005 fixed: year failed to be read from id3v1 tags.
 - 29-08-2005 added: codec to paplayer for .it, .s3m and .mod. Based on dumb.
 - 29-08-2005 cleanup: code to show/hide overlay per window
 - 29-08-2005 fixed: dvdplayer, libdvdcss data corruption when opening a dvd more then once
 - 29-08-2005 changed: Patch [1105861] (thx to slacker) quite a few changes to Build.bat
 - 28-08-2005 added: cross-linking of cast information in the movie info dialog window.
 - 28-08-2005 changed: Master Lock: Lock Settings and Lock Filemanger are now in one selectable setting. [GeminiServer]